add followerTarget to createAudience

--- a/app/views/createAudience.html
+++ b/app/views/createAudience.html
@@ -126,6 +126,29 @@
 				</div>
 
 			</div>
+			<br>
+			<br>
+			<div class="field-set grid-100 grid-parent head-toggle">
+				<h2 class="heading">2.3. Filters <span>*optional</span></h2>
+				<div class="onoffswitch filters" data-for="toggle-filters">
+					<input type="checkbox" name="filters" class="onoffswitch-checkbox" id="filters">
+					<label class="onoffswitch-label" for="filters">
+						<span class="onoffswitch-inner showhide"></span>
+						<span class="onoffswitch-switch"></span>
+					</label>
+				</div>
+			</div>
+			<div class="content-toggle toggle-filters">
+				<div class="form-group">
+					<div class="grid-20 mobile-grid-100 grid-parent">
+						<span class="ttip" title="Filter by the number of followers">Followers: <img src="/static/img/questionTooltip.png" /></span>
+					</div>
+					<div class="grid-80 mobile-grid-100 grid-parent">
+						<input type="number" [(ngModel)]="data.followerTarget.from" placeholder="min" class="form-control minmax" min="0" name="minFollowers" (change)="updateSidebar('filter')"> -
+						<input type="number" [(ngModel)]="data.followerTarget.to" placeholder="max" class="form-control minmax" min="0" name="maxFollowers" (change)="updateSidebar('filter')">
+					</div>
+				</div>
+			</div>
 
 			<br>
 			<br>
