--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -86,7 +86,7 @@
 				</div>
 				<div class="form-group">
 					<div class="grid-20 mobile-grid-100 grid-parent">
-						<span class="ttip" title="If toggled to on, you will be billed the full budget amount on a monthly basis and your campaign will be treated as a monthly recurring campaign.">Monthly Budget: <img src="/static/img/questionTooltip.png" /></span>
+						<span class="ttip" title="If toggled to on, you will be billed the full budget amount on a monthly basis and your campaign will be treated as a monthly recurring campaign.">Renew Monthly: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
 						<div class="onoffswitch monthly" data-for="toggle-monthly" style="float: none; margin-top: 5px;">
