--- a/app/views/mAgencies.html
+++ b/app/views/mAgencies.html
@@ -10,11 +10,11 @@
 <table class="tbl">
 	<thead>
 		<tr>
-			<th class="align-left">Agency</th>
-			<th>ID</th>
-			<th>Subs</th>
-			<th>Email</th>
-			<th>Signup Date</th>
+			<th class="align-left"  (click)="SortBy('name')">Agency</th>
+			<th (click)="SortBy('id')">ID</th>
+			<th (click)="SortBy('subCount')">Subs</th>
+			<th (click)="SortBy('email')">Email</th>
+			<th (click)="SortBy('createdAt')">Signup Date</th>
 			<th>Actions</th>
 		</tr>
 	</thead>
