--- a/app/views/mTalentAgencies.html
+++ b/app/views/mTalentAgencies.html
@@ -9,12 +9,12 @@
 
 <table class="tbl">
 	<thead>
-		<tr>
-			<th class="align-left">Agency</th>
-			<th>ID</th>
-			<th>Subs</th>
+		<tr class="sorter">
+			<th class="align-left" (click)="SortBy('name')">Agency</th>
+			<th (click)="SortBy('id')">ID</th>
+			<th (click)="SortBy('subCount')">Subs</th>
 			<th>Email</th>
-			<th>Signup Date</th>
+			<th (click)="SortBy('createdAt')">Signup Date</th>
 			<th>Actions</th>
 		</tr>
 	</thead>
