--- a/app/views/createAudience.html
+++ b/app/views/createAudience.html
@@ -2,11 +2,11 @@
 	<div class="content-holder center-widget">
 		<form #f="ngForm" novalidate (ngSubmit)="save()">
 			<div class="grid-100 grid-parent">
-				<h2 class="heading">1. Basic campaign settings</h2>
+				<h2 class="heading">1. Create Custom Influencer Audience</h2>
 
 				<div class="form-group">
 					<div class="grid-20 mobile-grid-100 grid-parent">
-						<span class="ttip" title="This image will draw influencers into your campaign. It should represent the product or service you are promoting.">Thumbnail: <img src="/static/img/questionTooltip.png" /></span>
+						<span class="ttip" title="This image appears as the audience background pic. Please use a photo relevant to your influencer group.">Thumbnail: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent" style="margin-top:13px;">
 						<span class="result rounded" *ngIf="!cropData.image && data.imageUrl">
@@ -17,10 +17,11 @@
 							<img [src]="cropData.image" style="max-width: 500px; border-radius: 10px;" height="200px">
 							<br>
 						</span>
-						<a href="javascript:" class="btn btn-xs btn-green1" (click)="toggleImage()">Select</a> <a href="http://swayops.com/wiki/selecting-deals.php" target="_blank">See placement examples</a>
+						<a href="javascript:" class="btn btn-xs btn-green1" (click)="toggleImage()">Select</a>
+
 						<div class="dialog" id="selImage">
 							<div style="width: 750px;" class="nosel">
-								<h2 class="heading">Select A Featured Image
+								<h2 class="heading">Select a Featured Image
 									<a href="javascript:" class="fui-cross" (click)="toggleImage(true)" title="Close" style="float: right"></a>
 								</h2>
 								<div>
@@ -47,12 +48,12 @@
 						<span class="ttip" title="This will be the name of your audience.">Audience Name:</span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
-						<input type="text" name="name" placeholder="Audience name" class="form-control" [(ngModel)]="data.name" required>
+						<input type="text" name="name" placeholder="Sports Stars, Makeup Girls, etc..." class="form-control" [(ngModel)]="data.name" required>
 					</div>
 				</div>
 				<div class="form-group">
 					<div class="grid-20 mobile-grid-100 grid-parent">
-						<span class="ttip" title="Select the social networks for influencers to post on. Be aware that our algorithms will automatically attempt to reach as many customers as possible on your behalf. Limiting social networks will limit performance in most cases.">Networks: <img src="/static/img/questionTooltip.png" /></span>
+						<span class="ttip" title="Select the social networks influencers must have to be in this audience group.">Networks: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
 						<div class="checkbox">
@@ -152,50 +153,21 @@
 
 			<br>
 			<br>
-			<div class="field-set grid-100 grid-parent head-toggle">
-				<h2 class="heading">3. Influencer Groups <span>*optional</span></h2>
-				<div class="onoffswitch influencers" data-for="toggle-influencers">
-					<input type="checkbox" name="influencers" class="onoffswitch-checkbox" id="influencers">
-					<label class="onoffswitch-label" for="influencers">
-						<span class="onoffswitch-inner showhide"></span>
-						<span class="onoffswitch-switch"></span>
-					</label>
-				</div>
-			</div>
-			<div class="content-toggle toggle-influencers">
-				<div class="form-group">
-					<div class="grid-100 mobile-grid-100 grid-parent">
-						<div class="grid-70 mobile-grid-100 grid-parent">
-							<div class="form-group">
-								Please select the influencer groups you would like to prioritize:
-							</div>
-						</div>
-						<div class="grid-30 mobile-grid-100 grid-parent">
-							<div class="checkbox">
-								<input name="selectAllInfluencers" type="checkbox" [checked]=allCats>
-								<label for="selectAllInfluencers" (click)=setAllCats($event)>Select All</label>
-							</div>
-						</div>
-						<br>
-						<div class="grid-50 mobile-grid-100 grid-parent influencer-g" *ngFor="let c of this.categories">
-							<div class="left img">
-								<div class="checkbox">
-									<input [name]="c.cat" [id]="c.cat" type="checkbox" [(ngModel)]="data.categories[c.cat]">
-									<label [attr.for]="c.cat" (click)="updateSidebar('category')"> </label>
-								</div>
-								<img src="{{ categoryImages[c.cat] || '/static/img/influencers/i-g2.png' }}" />
-							</div>
-							<div class="right meta">
-								<p class="i-n" style="text-transform: capitalize;">{{c.cat}}</p>
-								<p class="i-s"><span>Influencers: </span>{{c.infs | fmtNum:'N/A'}} &nbsp;&nbsp;&nbsp; <span>Est Reach: </span>{{c.reach | fmtNum:'N/A'}}</p>
-							</div>
-						</div>
-					</div>
-				</div>
 
+			<div *ngIf="infDlg.data && infDlg.data.length"><button class="btn" (click)="addAllMembers(infDlg)">Add All</button></div><br>
+			<div *ngFor="let inf of infDlg.data" class="inf">
+				<img [src]=inf.profilePicture> <a [href]=inf.url [title]=inf.name target="_blank">{{ inf.name | trunc:20 }}</a>
+				<img src="/static/img/location-icon.png"> {{inf.Location}} <br>
+				Followers: {{inf.followers | fmtNum}} <br>
+				Avg Engagements: {{inf.avgEngs | fmtNum:'N/A'}} <br>
+				Avg Price: {{inf.avgPrice | fmtNum:'N/A'}} <br>
+				<button class="btn btn-block btn-lg btn-orange ghost wide atwl" (click)="addToMembers(inf.email)" *ngIf="!isInMembers(inf.email)">ADD To Members</button>
+				<button class="btn btn-block btn-lg btn-green1 ghost wide" (click)="delFromMembers(inf.email)">INCLUDED</button>
 			</div>
+
 			<br>
 			<br>
+			
 			<div class="grid-50 mobile-grid-40 grid-parent">
 				<a href="javascript:history.back()" class="btn btn-block btn-lg btn-blue ghost">Back</a>
 			</div>
@@ -220,12 +192,6 @@
 			<div class="inf-reach grid-100 mobile-grid-100" *ngIf="forecast.loading">
 				<loader size="70px"></loader>
 			</div>
-			<div class="inf-reach grid-100 mobile-grid-100" *ngIf="!forecast.loading">
-				<div *ngFor="let inf of forecast.breakdown" class="inf">
-					<img [src]=inf.profilePicture> <span [title]=inf.name>{{ inf.name | trunc:12 }}</span> <b>|</b> Fans: {{inf.followers | fmtNum}}
-				</div>
-				<button class="btn btn-block btn-lg btn-blue ghost wide" (click)="showInfList(infDlg)">See More</button>
-			</div>
 		</li>
 		<li *ngIf="!!sidebar.categories">
 			<div class="grid-100 mobile-grid-100" style="text-transform:capitalize;">
@@ -249,12 +215,3 @@
 		</li>
 	</ul>
 </div>
-<modal title="Top 250 Influencers in Forecast" width="800px" [buttons]="infDlgButtons" #infDlg class="infList">
-	<div *ngIf="infDlg.data && infDlg.data.length"><button class="btn" (click)="addAllMembers(infDlg)">Add All</button></div><br>
-	<div *ngFor="let inf of infDlg.data" class="inf">
-		<img [src]=inf.profilePicture> <a [href]=inf.url [title]=inf.name target="_blank">{{ inf.name | trunc:20 }}</a><b> | </b>
-		<span class="numFollowers">Followers: {{inf.followers | fmtNum}}</span><b> | </b><span class="numEng">Avg. Engs.: {{inf.avgEngs | fmtNum:'N/A'}}</span>
-		<button class="btn btn-block btn-lg btn-orange ghost wide atwl" (click)="addToMembers(inf.email)" *ngIf="!isInMembers(inf.email)">ADD TO Members</button>
-		<button class="btn btn-block btn-lg btn-green1 ghost wide" (click)="delFromMembers(inf.email)">INCLUDED</button>
-	</div>
-</modal>
