--- a/app/views/createAudience.html
+++ b/app/views/createAudience.html
@@ -162,18 +162,36 @@
 			</div>
 			<br><br><br>
 			<div class="infList">
-				<div *ngFor="let inf of infData" class="grid-100 grid-parent">
-					<div class="grid-30 mobile-grid-30">
-						<img [src]=inf.profilePicture> <a [href]=inf.url [title]=inf.name target="_blank">{{ inf.name | trunc:20 }}</a>
+				<div *ngFor="let inf of infData" class="grid-100 grid-parent" style="margin-bottom: 10px;">
+					<div class="grid-20 mobile-grid-30">
+						<img style="border-radius: 5px; height: auto; width: 100%; margin-right: 10px; background-color: #fff;" [src]=inf.profilePicture> 
 					</div>
-					<div class="grid-50 mobile-grid-70">
-						Followers: {{inf.followers | fmtNum}} |
-						Avg. Engs.: {{inf.avgEngs | fmtNum:'N/A'}}
+					<div class="grid-50 mobile-grid-70" style="line-height: inherit;">
+						<a (click)="inf.showDetails = ! inf.showDetails"><span style="font-size: 16px;">{{ inf.name | trunc:20 }}</span></a> - Social icons linking to each
+						<br>
+						<img style="width: auto; height: auto; background:none;" src="static/img/location-icon.png"> {{ inf.Location}}
+						<br>
+						Total Followers: <b>{{inf.followers | fmtNum}}</b>
+						<br>
+						Avg. Engagements: <b>{{inf.avgEngs | fmtNum:'N/A'}}</b>
+						<br>
+						Sway Score: <b>{{inf.swayScore | fmtNum:'N/A'}}</b>
+						<br>
 					</div>
-					<div class="grid-20 mobile-grid-100 align-right">
-						<button class="btn btn-block btn-lg btn-blue ghost wide" (click)="addToMembers(inf.email)" *ngIf="!isInMembers(inf.email)">ADD</button>
+					<div class="grid-30 mobile-grid-100 align-right" style="line-height: inherit;">
+					<br>
+						Rate: <b>${{inf.avgEngs | fmtNum:'N/A'}} - {{inf.avgEngsIncreased | fmtNum:'N/A'}}</b>
+						<br>
+						<button class="btn btn-block btn-lg btn-blue ghost wide" (click)="addToMembers(inf.email)" *ngIf="!isInMembers(inf.email)">ADD TO AUDIENCE</button>
 						<button class="btn btn-block btn-lg btn-green1 ghost wide" (click)="delFromMembers(inf.email)" *ngIf="isInMembers(inf.email)">INCLUDED</button>
 					</div>
+					<!--dropdown with extra info-->
+					<div class="grid-100 grid-parent">
+						<div class="grid-50 mobile-grid-70" style="line-height: inherit;" *ngIf="inf.showDetails">
+						Extra insight data coming soon.
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</form>
