--- a/app/views/createAudience.html
+++ b/app/views/createAudience.html
@@ -189,9 +189,13 @@
 						<img style="border-radius: 5px; height: auto; width: 100%; margin-right: 10px; background-color: #fff;" [src]=inf.profilePicture>
 					</div>
 					<div class="grid-50 mobile-grid-70" style="line-height: inherit;">
-						<a (click)="inf.showDetails = ! inf.showDetails"><span style="font-size: 16px;">{{ inf.name | trunc:20 }}</span></a> - Social icons linking to each
+						<a (click)="inf.showDetails = ! inf.showDetails"><span style="font-size: 16px;">{{ inf.name | trunc:20 }}</span></a> -
+						<a target="_blank" href="{{ inf.url }}"  *ngIf="inf.hasTwitter"><i title="Twitter" class="fui-twitter"></i></a>
+						<a target="_blank" href="{{ inf.url }}"  *ngIf="inf.hasFacebook"><i title="Facebook" class="fui-facebook"></i></a>
+						<a target="_blank" href="{{ inf.url }}"  *ngIf="inf.hasInsta"><i title="Instagram" class="fui-instagram"></i></a>
+						<a target="_blank" href="{{ inf.url }}"  *ngIf="inf.hasYoutube"><i title="YouTube" class="fui-youtube"></i></a>
 						<br>
-						<img style="width: auto; height: auto; background:none;" src="static/img/location-icon.png"> {{ inf.Location}}
+						<img style="width: auto; height: auto; background:none;" src="static/img/location-icon.png"> {{inf.Location}}
 						<br>
 						Total Followers: <b>{{inf.followers | fmtNum}}</b>
 						<br>
