--- a/app/views/createAudience.html
+++ b/app/views/createAudience.html
@@ -195,7 +195,7 @@
 						<a target="_blank" href="{{ inf.url }}"  *ngIf="inf.hasInsta"><i title="Instagram" class="fui-instagram"></i></a>
 						<a target="_blank" href="{{ inf.url }}"  *ngIf="inf.hasYoutube"><i title="YouTube" class="fui-youtube"></i></a>
 						<br>
-						<img style="width: auto; height: auto; background:none;" src="static/img/location-icon.png"> {{inf.Location}}
+						<img style="width: auto; height: auto; background:none;" src="static/img/location-icon.png"> {{inf.geo}}
 						<br>
 						Total Followers: <b>{{inf.followers | fmtNum}}</b>
 						<br>
