--- a/app/views/createAudience.html
+++ b/app/views/createAudience.html
@@ -108,14 +108,6 @@
 						<select multiple="multiple" class="geo form-control multiselect multiselect-info"></select>
 					</div>
 				</div>
-				<div class="form-group">
-					<div class="grid-20 mobile-grid-100 grid-parent">
-						<span class="ttip" title="Enter keywords to target influencers by the genre of content their posts often contain. IE: Snowboarding, Boats, Beauty, etc. Please select multiple keywords to expand the reach of your campaign.">Keywords: <img src="/static/img/questionTooltip.png"></span>
-					</div>
-					<div class="grid-80 mobile-grid-100 grid-parent">
-						<select multiple="multiple" class="kws form-control multiselect multiselect-info"></select>
-					</div>
-				</div>
 				<br>
 				<div class="form-group">
 					<div class="grid-20 mobile-grid-100 grid-parent">
@@ -176,10 +168,18 @@
 			<br>
 			<br>
 
-			<div class="grid-50 mobile-grid-50 grid-parent align-left">
+			<div class="grid-20 mobile-grid-30 grid-parent align-left">
 				<button class="btn btn-block btn-lg" type="button" (click)="addAllMembers()" [disabled]="!influencers.length">Add All</button>
 			</div>
-			<div class="grid-50 mobile-grid-50 grid-parent align-right">
+			<div class="form-group grid-parent grid-50 mobile-grid-70">
+				<div class="grid-95 mobile-grid-95 grid-parent">
+					<select multiple="multiple" class="kws form-control multiselect multiselect-info"></select>
+				</div>
+				<div class="grid-5 mobile-grid-5 grid-parent" style="padding-top: 9px; padding-left: 3px">
+					<span class="ttip" title="Enter keywords to target influencers by the genre of content their posts often contain. IE: Snowboarding, Boats, Beauty, etc. Please select multiple keywords to expand the reach of your campaign."><img src="/static/img/questionTooltip.png"></span>
+				</div>
+			</div>
+			<div class="grid-30 mobile-grid-100 grid-parent align-right">
 				<button type="submit" class="btn btn-block btn-lg btn-green1" [disabled]="!f.valid || loading">Save Audience &#187;</button>
 			</div>
 			<br><br><br>
