--- a/app/views/createAudience.html
+++ b/app/views/createAudience.html
@@ -176,7 +176,7 @@
 					<select multiple="multiple" class="kws form-control multiselect multiselect-info"></select>
 				</div>
 				<div class="grid-5 mobile-grid-5 grid-parent" style="padding-top: 9px; padding-left: 3px">
-					<span class="ttip" title="Enter keywords to target influencers by the genre of content their posts often contain. IE: Snowboarding, Boats, Beauty, etc. Please select multiple keywords to expand the reach of your campaign."><img src="/static/img/questionTooltip.png"></span>
+					<span class="ttip" title="Enter search terms to target influencers by the genre of content their posts often contain, terms in their bio, or social media handles."><img src="/static/img/questionTooltip.png"></span>
 				</div>
 			</div>
 			<div class="grid-30 mobile-grid-100 grid-parent align-right">
