--- a/app/views/mAudiences.html
+++ b/app/views/mAudiences.html
@@ -18,7 +18,7 @@
 	</thead>
 	<tbody>
 		<tr *ngFor="let v of list | filter:FilterUsers">
-			<td class="align-left"><a (click)=edlg.show(v)>{{v.name}}</a></td>
+			<td class="align-left"><a [routerLink]="['/editAudience', v.id]">{{v.name}}</a></td>
 			<td>{{v.id}}</td>
 			<td>{{v.sub}}</td>
 			<td>
