--- a/app/views/createAudience.html
+++ b/app/views/createAudience.html
@@ -112,7 +112,7 @@
 			<br>
 			<br>
 			<div class="field-set grid-100 grid-parent head-toggle">
-				<h2 class="heading">2.3. Filters <span>*optional</span></h2>
+				<h2 class="heading">3. Filters <span>*optional</span></h2>
 				<div class="onoffswitch filters" data-for="toggle-filters">
 					<input type="checkbox" name="filters" class="onoffswitch-checkbox" id="filters">
 					<label class="onoffswitch-label" for="filters">
@@ -154,23 +154,27 @@
 					</div>
 				</div>
 			</div>
-
 			<br>
 			<br>
 
-			<div class="grid-20 mobile-grid-30 grid-parent align-left">
-				<button class="btn btn-block btn-lg" type="button" (click)="allMembers(true)" [disabled]="!influencers.length" *ngIf="!data.token">Add All</button>
-				<button class="btn btn-block btn-lg btn-green" type="button" (click)="allMembers(false)" [disabled]="!influencers.length" *ngIf="!!data.token">Remove All</button>
+			<div class="field-set grid-100 grid-parent head-toggle">
+				<h2 class="heading">4. Smart Search <span>*optional</span></h2>
 			</div>
-			<div class="form-group grid-parent grid-50 mobile-grid-70">
-				<div class="grid-95 mobile-grid-95 grid-parent">
+			<div class="form-group grid-parent grid-100 mobile-grid-100">
+				<div class="grid-20 mobile-grid-100 grid-parent">
+						<span class="ttip" title="Enter search terms to target influencers by the genre of content their posts often contain, terms in their bio, or social media handles.">Smart Search: <img src="/static/img/questionTooltip.png" /></span>
+				</div>
+				<div class="grid-80 mobile-grid-80 grid-parent">
 					<select multiple="multiple" class="kws form-control multiselect multiselect-info"></select>
 				</div>
-				<div class="grid-5 mobile-grid-5 grid-parent" style="padding-top: 9px; padding-left: 3px">
-					<span class="ttip" title="Enter search terms to target influencers by the genre of content their posts often contain, terms in their bio, or social media handles."><img src="/static/img/questionTooltip.png"></span>
-				</div>
 			</div>
-			<div class="grid-30 mobile-grid-100 grid-parent align-right">
+
+			<div class="grid-50 mobile-grid-50 grid-parent align-left">
+				<button class="btn btn-block" type="button" (click)="allMembers(true)" [disabled]="!influencers.length" *ngIf="!data.token">Add All Influencers</button>
+				<button class="btn btn-block btn-green" type="button" (click)="allMembers(false)" [disabled]="!influencers.length" *ngIf="!!data.token">Deselect All Influencers</button>
+			</div>
+
+			<div class="grid-50 mobile-grid-50 grid-parent align-right">
 				<button type="submit" class="btn btn-block btn-lg btn-green1" [disabled]="!f.valid || loading">Save Audience &#187;</button>
 			</div>
 			<br><br><br>
@@ -208,6 +212,11 @@
 					</div>
 				</div>
 			</div>
+			<br>
+			<div class="grid-100 mobile-grid-100 grid-parent align-right">
+				<button type="submit" class="btn btn-block btn-lg btn-green1" [disabled]="!f.valid || loading">Save Audience &#187;</button>
+			</div>
+
 		</form>
 		<br>
 		<br>
