update on aud change

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -397,7 +397,7 @@
 							<div class="left img">
 								<div class="checkbox">
 									<input [name]="a.id" [id]="a.id" type="checkbox" [(ngModel)]="data.audiences[a.id]">
-									<label [attr.for]="a.id" (click)="updateSidebar('audience')"> </label>
+									<label [attr.for]="a.id" (click)="updateSidebar('audiences')"> </label>
 								</div>
 								<img [src]="a.imageUrl" style="width: 70px; height: 70px">
 							</div>
